# fcd

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bumpversion.fish  fcd.fish  fcd.sh
.github/workflows/: build.yml  release.yml
config/: config.toml  fcv-config.toml
doc/: fcd-view.1.adoc  fcd.1.adoc
src/: app.rs  button_bar.rs  component.rs  config.rs  dlg_error.rs  dlg_goto.rs  dlg_hex_search.rs  dlg_search.rs  dlg_text_search.rs  events.rs  file_viewer.rs  fnmatch.rs  hex_viewer.rs  main.rs  palette.rs  shutil.rs  stat.rs  template.rs  terminal_restorer.rs  text_viewer.rs  tilde_layout.rs  top_bar.rs  ui.rs
src/fm/: app.rs  archive_mounter.rs  bookmarks.rs  dirscan.rs  dlg_fzf.rs  dlg_mount_archive.rs  entry.rs  file_panel.rs  mod.rs  panel.rs  quickview.rs
src/fm/command_bar/: cmdbar.rs  command_bar_error.rs  component.rs  filter.rs  leader.rs  mod.rs
src/fm/cp_mv_rm/: cp_mv.rs  create_database.sql  database.rs  dirscan.rs  dlg_cp_mv.rs  dlg_cp_mv_progress.rs  dlg_dirscan.rs  dlg_pending_job.rs  dlg_question.rs  dlg_report.rs  dlg_rm_progress.rs  mod.rs  rm.rs
src/viewer/: app.rs  dir_viewer.rs  dlg_goto.rs  dlg_hex_search.rs  dlg_text_search.rs  file_viewer.rs  hex_viewer.rs  mod.rs  text_viewer.rs  top_bar.rs
src/widgets/: button.rs  check_box.rs  input.rs  mod.rs  radio_box.rs
