[package]
name = "fcv"
version = "0.1.0"
edition = "2021"
authors = ["Franco Bugnano <franco@bugnano.it>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
ratatui = { version = "*", default-features = false, features = ['termion'] }
signal-hook = "*"
anyhow = "*"
log = "*"
env_logger = "*"
clap = { version = "*", features = ["derive"] }
encoding_rs = "*"
syntect = { version = "*", default-features = false, features = ["default-fancy"]}
