[package]
name = "fcd"
version = "0.1.0"
edition = "2021"
authors = ["Franco Bugnano <franco@bugnano.it>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
ratatui = { version = "*", default-features = false, features = ["termion", "serde"] }
crossbeam-channel = "*"
signal-hook = "*"
anyhow = "*"
log = "*"
env_logger = "*"
clap = { version = "*", features = ["derive", "cargo"] }
encoding_rs = "*"
#syntect = { version = "*", default-features = false, features = ["default-fancy"] }
syntect = "*"
#bat = { version = "*", default-features = false, features = ["regex-fancy"] }
bat = { version = "*", default-features = false, features = ["regex-onig"] }
serde = "*"
toml = "*"
xdg = "*"
libc = "*"
unicode-width = "*"
unicode-normalization = "*"
regex = "*"
uzers = "*"
path-clean = "*"
caseless = "*"

[profile.release]
strip = true
lto = true
codegen-units = 1
